# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
page_analyzer/: app.py  parser.py  url_check.py  validate.py
page_analyzer/db_operators/: database.py  url_service.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
